Fix borders on small screen and for printing

--- a/_sass/partials/_schedule.scss
+++ b/_sass/partials/_schedule.scss
@@ -158,14 +158,16 @@ $small-label-width: 80px;
     padding: 20px 15px 30px;
     min-height: 120px;
     background: #fff;
-    border-top-width: 5px;
-    border-top-style: solid;
-    border-top-color: #ccc;
     transition: $base-transition;
     &:hover {
         opacity: 0.7;
     }
-    @media screen and (max-width: 767px) {
+    @media screen and (min-width: 768px) {
+        border-top-width: 5px;
+        border-top-style: solid;
+        border-top-color: #ccc;
+    }
+    @media all and (max-width: 767px) {
         padding-bottom: 20px;
         min-height: 90px;
         border-right-width: 5px;
